--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
     sdk: flutter
   freezed_annotation: ^2.4.1
   hooks_riverpod: ^2.4.1
-  pedantic_mono: ^1.24.0+1
+  pedantic_mono: ^1.23.0
 
 dev_dependencies:
   build_runner: ^2.4.6
