--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,10 +14,13 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
+  flutter_hooks: ^0.20.2
   freezed_annotation: ^2.4.1
   googleapis: ^11.4.0
   googleapis_auth: ^1.4.1
   hooks_riverpod: ^2.4.1
+  html: ^0.15.4
+  http: ^1.1.0
   pedantic_mono: ^1.23.0
 
 dev_dependencies:
