--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,10 @@ dependencies:
   dio: ^5.3.3
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.1.0
   freezed_annotation: ^2.4.1
+  googleapis: ^11.4.0
+  googleapis_auth: ^1.4.1
   hooks_riverpod: ^2.4.1
   pedantic_mono: ^1.23.0
 
