--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,12 +9,15 @@ environment:
   sdk: '>=3.0.6 <4.0.0'
 
 dependencies:
+  crypto: ^3.0.3
   cupertino_icons: ^1.0.2
   dio: ^5.3.3
   flutter:
     sdk: flutter
   freezed_annotation: ^2.4.1
   hooks_riverpod: ^2.4.1
+  html: ^0.15.4
+  http: ^1.1.0
   pedantic_mono: ^1.23.0
 
 dev_dependencies:
