--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
+  flutter_hooks: ^0.20.3
   freezed_annotation: ^2.4.1
   googleapis: ^11.4.0
   googleapis_auth: ^1.4.1
